--- a/src/common/hbs/leftmenu.hbs
+++ b/src/common/hbs/leftmenu.hbs
@@ -3,13 +3,12 @@
     <div class="zpl_act tooltip-js" onclick="moduswtch('homelanding1',this)" modname="home" data-title-position="right" title="Home">
         <i class="PI_fil_home"></i><span>Home</span>
     </div>
-    <div class="tooltip-js" onclick="moduswtch('leavelanding1',this)" modname="leave" data-title-position="right" title="leave">
+    {{!-- <div class="tooltip-js" onclick="moduswtch('leavelanding1',this)" modname="leave" data-title-position="right" title="leave">
         <i class="PI_fil_askus"></i><span>To-Do's</span>
-        {{!-- <em class="notfiy"></em> --}}
-    </div>
-    <div class="tooltip-js" onclick="moduswtch('asklanding1',this)" modname="ask" data-title-position="right" title="Askus">
+    </div> --}}
+    {{!-- <div class="tooltip-js" onclick="moduswtch('asklanding1',this)" modname="ask" data-title-position="right" title="Askus">
         <i class="PI_fil_training"></i><span>Ask Us</span>
-    </div>
+    </div> --}}
     <div class="zpl_ladd custmvw tooltip-js" onclick="moduswtch('feed1',this)" modname="leave" data-title-position="right" title="Feeds">
         <i class="PI_comment"></i><span>Feeds</span>
     </div>
