--- a/src/common/hbs/leftmenu.hbs
+++ b/src/common/hbs/leftmenu.hbs
@@ -9,22 +9,25 @@
     {{!-- <div class="tooltip-js" onclick="moduswtch('asklanding1',this)" modname="ask" data-title-position="right" title="Askus">
         <i class="PI_fil_training"></i><span>Ask Us</span>
     </div> --}}
-    <div class="tooltip-js" onclick="moduswtch('mail1',this)" modname="leave" data-title-position="right" title="Feeds">
+    <div class="tooltip-js" onclick="moduswtch('workspc',this)" modname="leave" data-title-position="right" title="Feeds">
+        <i class="PI_case"></i><span>Workspace</span>
+    </div>
+    <div class="zpl_ladd tooltip-js" onclick="moduswtch('mail1',this)" modname="leave" data-title-position="right" title="Feeds">
         <i class="PI_mail"></i><span>Mail</span>
     </div>
     <div class="tooltip-js" onclick="moduswtch('calen1',this)" modname="leave" data-title-position="right" title="Feeds">
         <i class="PI_calendar"></i><span>Calendar</span>
     </div>
-    {{!-- <div class="custmvw tooltip-js" onclick="moduswtch('leavelanding1',this)" modname="leave" data-title-position="right" title="Feeds">
+    <div class="custmvw tooltip-js" onclick="moduswtch('leavelanding1',this)" modname="leave" data-title-position="right" title="Feeds">
         <i class="PI_star"></i><span>Todo's</span>
-    </div> --}}
+    </div>
     <div class="custmvw tooltip-js" onclick="moduswtch('feed1',this)" modname="leave" data-title-position="right" title="Feeds">
         <i class="PI_comment"></i><span>Feeds</span>
     </div>
     <div class="custmvw tooltip-js" onclick="moduswtch('channel1',this)" modname="ask" data-title-position="right" title="Channel">
         <i class="PI_usr"></i><span>Channel</span>
     </div>
-    <div class="zpl_ladd custmvw tooltip-js" modname="performance" data-title-position="right" title="Expense">
+    <div class="custmvw tooltip-js" modname="performance" data-title-position="right" title="Expense">
         <i style="    background: url(../../images/settings/zp-spriteinteg.png);background-size: 314px;background-position: -74px -84px;"></i><span>Expense</span>
     </div>
     <div class="custmvw tooltip-js" modname="lms" data-title-position="right" title="Recruit">
