--- a/src/common/hbs/moduletopband.hbs
+++ b/src/common/hbs/moduletopband.hbs
@@ -30,22 +30,23 @@
             </div>
         </div> --}}
         <ul class="zpl_rnav">
-            <!-- <li onclick="moduswtch('settings')" class="tooltip-js" data-title-position="bottom" title="Settings"><i class="PI_setting"></i></li> -->
-            <li class="tooltip-js" data-title-position="bottom" title="Quick actions" onclick="actn()"><i class="PI_quick_action fil"></i></li>
             {{!-- <li class="tooltip-js" data-title-position="bottom" title="manager" onclick="manager(this)"><i class="PI_user"></i></li> --}}
             {{!-- <li class="tooltip-js" data-title-position="bottom" title="admin" onclick="admin(this)"><i class="PI_promo"></i></li> --}}
-            <div class="zpl_glsrch">
+            {{!-- <div class="zpl_glsrch">
                         <div data-popup-open="zpl_glsrch">
                             <i class="PI_lens"></i>
                             <input placeholder="Search Across Zoho People" type="text">
                         </div>
-                    </div>
-            <li class="zpl_Nvpicimg" onclick="todo()"> <div class="zpl_Nvpic"><img src="../../images/tony.jpg"></div></li>
+                    </div> --}}
+            <li class="tooltip-js" data-title-position="bottom" title="search"><i class="PI_lens"></i></li>
+            <li class="tooltip-js" data-title-position="bottom" title="Quick actions" onclick="actn()"><i class="PI_quick_action fil"></i></li>
             <li class="tooltip-js" data-title-position="bottom" title="Notifications"><i class="PI_notify"></i></li>
+            <li onclick="moduswtch('settings')" class="tooltip-js" data-title-position="bottom" title="Settings"><i class="PI_setting"></i></li>
+            <li class="zpl_Nvpicimg" onclick="todo()"> <div class="zpl_Nvpic"><img src="../../images/tony.jpg"></div></li>
         </ul>
-        <ul class="zpl_rnav">
+        {{!-- <ul class="zpl_rnav">
             <li class="tooltip-js" data-title-position="bottom" title="Applications" onclick="custom()"><i class="PI_app"></i></li>
-        </ul>
+        </ul> --}}
     </div>
 </div>
 
